[package]
name = "sig_server"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.5"
config = "0.9.3"
base64 = "0.11.0"
ed25519-dalek = "1.0.0-pre.3"
failure = "0.1"
zeroize = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.3"

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3.1"

[[bench]]
name = "base64_txns"
harness = false

[profile.release]
debug = true

[profile.bench.package.rayon]
debug = true
opt-level = 0

[profile.test.package.rayon]
debug = true
opt-level = 0